--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@ $(document).ready(function () {
     var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
     var osmAttrib = 'Map data &copy; OpenStreetMap contributors';
     var osm = new L.TileLayer(osmUrl, {
-        minZoom: 2,
-        maxZoom: 18,
+        minZoom: 10,
+        maxZoom: 17,
         attribution: osmAttrib
     });
 
-    var defaultLayer = L.tileLayer.provider('Nokia.satelliteNoLabelsDay').addTo(map);
+    var defaultLayer = L.tileLayer.provider('Nokia.satelliteNoLabelsDay',{minZoom: 10, maxZoom: 17}).addTo(map);
 
     var cloudmadeURL = 'http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/{styleId}/256/{z}/{x}/{y}.png';
     var nightTime = L.tileLayer(cloudmadeURL, {
-        minZoom: 4,
-        maxZoom: 16,
+        minZoom: 0,
+        maxZoom: 17,
         styleId: 999
     });
 
@@ -119,10 +119,11 @@ $(document).ready(function () {
 
     /* -----------------------------------   Station Points--------------------------------  */
     var markers = new L.MarkerClusterGroup({
-        maxClusterRadius: 20,
-        spiderfyOnMaxZoom: false,
+        maxClusterRadius: 25,
+        spiderfyOnMaxZoom: true,
+        spiderfyDistanceMultiplier: 3,
         showCoverageOnHover: false,
-        zoomToBoundsOnClick: false
+        zoomToBoundsOnClick: true
     });
 
     function handleJson(data) {
@@ -139,9 +140,9 @@ $(document).ready(function () {
 
         markers.addLayer(geojsonLayer);
         map.addLayer(markers);
-        markers.on('clusterclick', function (a) {
-            a.layer.spiderfy();
-        });
+//        markers.on('clusterclick', function (a) {
+//            a.layer.spiderfy();
+//        });
 
     }
 
